# facemask-plugin

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  appveyor.yml  base64.cpp  base64.h  dlibgpu.cpp  exceptions.h  face-mask-filter.cpp  face-mask-filter.h  face_landmark_detection_dlib_of_kf_mixed.cpp  gs-effect.cpp  gs-effect.h  gs-indexbuffer.cpp  gs-indexbuffer.h  gs-rendertarget.cpp  gs-rendertarget.h  gs-texture.cpp  gs-texture.h  gs-vertex.cpp  gs-vertex.h  gs-vertexbuffer.cpp  gs-vertexbuffer.h  mask-instance-data.h  mask-resource-animation.cpp  mask-resource-animation.h  mask-resource-effect.cpp  mask-resource-effect.h  mask-resource-emitter.cpp  mask-resource-emitter.h  mask-resource-image.cpp  mask-resource-image.h  mask-resource-light.cpp  mask-resource-light.h  mask-resource-material.cpp  mask-resource-material.h  mask-resource-mesh.cpp  (+22 more)
apps/FaceDetection/: CMakeLists.txt  main.cpp
apps/FaceDetectorTrain/: .gitignore  CMakeLists.txt  main.cpp
apps/FaceLandmarks/: CMakeLists.txt  main.cpp
apps/FaceLandmarksTrain/: .gitignore  CMakeLists.txt  main.cpp
ci/: cmake-build.cmd  copy-signed-binaries.cmd  win-signed-build.ps1
data/: format.bat  gifmaker.bat  sidebyside.bat  videomaker.bat
data/alerts/: alert.json  alert_LB.json  alert_LT.json  alert_RB.json  alert_RT.json
data/effects/: aa.effect  color_alpha_tex.effect  color_conversion.effect  color_grading_filter.effect  default.effect  denoise.effect  merge.effect  pbr.effect  phong.effect  skinned-phong.effect  vcol_mod_tex.effect
data/fonts/: README.txt
data/locale/: en-US.ini
data/masks/: AngelWings.head.json  Banana Fan Fruit Hat.json  Baseball Cap.json  Beating Hearts Antennae.json  Beret 4.json  Beret 5.json  Beret 6.json  Beret.json  Beret2.head.json  Beret_5+head.json  Bling Bling Glasses.json  Bow 1.json  Bow 2.json  Bow 3.json  Bow 4.json  Bow 5.json  Bowtie 1.json  Bowtie 3.json  Bowtie 4.json  Bowtie1.json  Bowtie2.json  Brown Elephant.json  Bunny Ears Listening.json  Cigar.json  Crabby.json  Crown.json  Curly Antennae.json  Doggy Ears.json  Dollah Glasses.json  Donkey Surprise.json  Donkey.json  Ears 1.json  Ears 2.json  Ears 3.json  Ears 4.json  Ears 5.json  Ears 6.json  Elephant.json  Fatty.json  Fire Horns.json  (+122 more)
data/resources/: cylinder.notobj  head.notobj
data/test/: bluesphere.json  gifmaker.bat  greensphere.json  redsphere.json
data_ext/: README.md  sidebyside.bat
data_ext/masks/: b41214ab-8ef1-4842-924d-be113e2b5566.json
electron/: electron.sln
gs/: gs-effect.cpp  gs-effect.h  gs-indexbuffer.cpp  gs-rendertarget.cpp  gs-rendertarget.h  gs-texture.cpp  gs-texture.h  gs-vertexbuffer.cpp  gs-vertexbuffer.h
mask/: mask-events.cpp  mask-events.h  mask-instance-data.h  mask-resource-animation-target.cpp  mask-resource-animation-target.h  mask-resource-animation.cpp  mask-resource-animation.h  mask-resource-effect.cpp  mask-resource-effect.h  mask-resource-emitter.cpp  mask-resource-emitter.h  mask-resource-image.cpp  mask-resource-image.h  mask-resource-light.cpp  mask-resource-light.h  mask-resource-material.cpp  mask-resource-material.h  mask-resource-mesh.cpp  mask-resource-mesh.h  mask-resource-model-view.cpp  mask-resource-model-view.h  mask-resource-model.cpp  mask-resource-model.h  mask-resource-morph.cpp  mask-resource-sequence.cpp  mask-resource-sequence.h  mask-resource-skinned-model.cpp  mask-resource-skinned-model.h  mask-resource-sound.cpp  mask-resource.cpp  mask-resource.h  mask.cpp  mask.h
plugin/: base64.cpp  base64.h  cud.cpp  exceptions.cpp  face-mask-filter.cpp  face-mask-filter.h  face_landmark.cpp  oc.cpp  ocgp.cpp  ocgpu.cpp  p.cpp  p1.h  p2.h  plugin.cpp  plugin.h  plugin1.cpp  plugin2.cpp  plugin_wrapper.cpp  strings.h  utils.cpp  utils.h
smll/: Common.hpp  Config.cpp  Config.hpp  DLibImageWrapper.hpp  DetectionFunctions.cpp  DetectionResults.cpp  DetectionResults.hpp  Face.cpp  Face.hpp  FaceDetector.cpp  FaceDetector.hpp  ImageWrapper.cpp  ImageWrapper.hpp  Kalman.hpp  MorphData.cpp  MorphData.hpp  OBSFaceDetector.cpp  OBSFaceDetector.hpp  OBSFont.cpp  OBSFont.hpp  OBSRenderer.cpp  OBSRenderer.hpp  OBSTexture.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp  SingleValueKalman.cpp  SingleValueKalman.hpp  TestingPipe.cpp  TestingPipe.hpp  TextShaper.cpp  TextShaper.hpp  TriangulationResult.cpp  TriangulationResult.hpp  landmarks.cpp  landmarks.hpp  sarray.hpp
smll/FaceLib/: FaceDetector.cpp  FaceDetector.h  FaceDetector.hpp  FaceLandmarks.cpp  FaceLandmarks.h  FaceTracker.cpp  FaceTracker.h
test/: TestDetection.cpp  test-base64.cpp  test-image.cpp  test-kalman.cpp  test-utils.cpp  test.cpp
test-detection-tracking/: test-detection-tracking.cpp  test-detection-tracking.hpp
tools/MaskMaker/: .gitignore  CMakeLists.txt  MaskMaker.cpp  README.txt  args.cpp  args.h  avir.h  command_addpart.cpp  command_addpart.h  command_addres.cpp  command_addres.h  command_create.cpp  command_create.h  command_depends.cpp  command_depends.h  command_import.cpp  command_import.h  command_inspect.cpp  command_inspect.h  command_merge.cpp  command_merge.h  command_morph_import.cpp  command_morph_import.h  command_tweak.cpp  command_tweak.h  json.hpp  stdafx.cpp  stdafx.h  utils.cpp  utils.h
tools/landmarks/: five_landmarks.fbx  five_landmarks_viz.fbx  five_landmarks_viz.json  landmarks.fbx  landmarks.ma  landmarks.mb  landmarks.mtl  landmarks3.ma
tools/morphs/: morph_beauty1.fbx  morph_beauty1.json  morph_beauty2.fbx  morph_beauty2.json  morph_bigEyes1.fbx  morph_bigEyes1.json  morph_bigEyes2.fbx  morph_bigEyes2.json  morph_gross.fbx  morph_gross.json  morph_pose.fbx  morph_pose.mb  morph_rest.fbx  morph_rest.mb  test+BaseballCap.json  test.json  test2.json  test3.json
tools/scripts/: add-depth-head.bat  add-emitter.bat  add-emitter2.bat  add-image.bat  add-lighting_rig_01.bat  add-part.bat  add-sequence.bat  arttool.bat  arttool2.bat  maskmaker.bat  maskmerge.bat  mergetool.bat  pipinstallqt5.bat  run-sentry-cli.cmd  tilemaker.bat
tools/scripts/arttool/: additions.py  arttool.py  releases.py  tilemaker.py  utils.py
